objects/Market_Share__c.object
<CustomObject>
    <description>Market Share detail by state and county so that I can report on overall market saturation.</description>
    <fields>
        <fullName>Animal_Count__c</fullName>
        <description>Field to capture Animal Count for Market Share analysis.</description>
        <label>Animal Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_FIPS__c</fullName>
        <description>Field to capture County FIPS for Market Share analysis.</description>
        <label>County FIPS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Field to capture County for Market Share analysis.</description>
        <label>County</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feeding_Rate__c</fullName>
        <description>Field to capture Feeding Rate for Market Share analysis.</description>
        <label>Feeding Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Share__c</fullName>
        <description>Field to capture Market Share for Market Share analysis.</description>
        <label>Market Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <description>Field to capture Species relates for Market Share analysis.</description>
        <label>Species</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Companion</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Training</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Field to capture State for Market Share analysis.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Armed Forces Americas</fullName>
                </value>
                <value>
                    <fullName>Armed Forces Europe</fullName>
                </value>
                <value>
                    <fullName>Armed Forces Pacific</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Federated Micronesia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Marshall Islands</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tons_Available__c</fullName>
        <description>Field to capture Tons Available for Market Share analysis.</description>
        <label>Tons Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tons_Sold__c</fullName>
        <description>Field to capture Tons Sold for Market Share analysis.</description>
        <label>Tons Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Market Share</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>County__c</columns>
        <columns>County_FIPS__c</columns>
        <columns>Species__c</columns>
        <columns>Animal_Count__c</columns>
        <columns>Feeding_Rate__c</columns>
        <columns>Tons_Available__c</columns>
        <columns>Tons_Sold__c</columns>
        <columns>Market_Share__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>State-County-Specie</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Shares</pluralLabel>
    <recordTypes>
        <fullName>Market_Share</fullName>
        <active>true</active>
        <description>Record Type that will capture details for Market Share analysis</description>
        <label>Market Share</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>